...
            ),
            uid = historyService.getCurrentUid()!!
        )
    }

    /**
     * Helper function to get the current time in a `Long` format
     */
    private fun currentTimeToLong(): Long {
        return System.currentTimeMillis()
    }
}

