...
                            )
                            if (isBookmarked(distraction)) {
                                Icon(
                                    Icons.Filled.Favorite,
                                    contentDescription = "Bookmark button",
                                    tint = Color.Red,
                                    modifier = Modifier.testTag("distraction-list-screen__bookmarked-icon")
                                )
                            }
                        }

                        Text(
                            text = distraction.description!!,
...
